--- a/configuration/filter.yaml
+++ b/configuration/filter.yaml
@@ -1,1 +1,4 @@
-- "hardware_screw_countersunk_m3_black_6_mm_length_hex_head"
+- "hardware_screw_countersunk_m3_black_12_mm_length_hex_head"
+- "hardware_nut_m3"
+- "oobb_part_plate_03_03_03"
+
